<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <EditText
        android:paddingHorizontal="@dimen/default_margin"
        android:textColor="@color/black"
        android:textColorHint="@color/black_apha70"
        android:hint="@string/input_file_name"
        android:id="@+id/et_file_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_setting"
        app:layout_constraintTop_toTopOf="@id/btn_setting"
        app:layout_constraintBottom_toBottomOf="@id/btn_setting"
        />

    <ImageButton
        android:id="@+id/btn_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_settings_24"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_info_icon_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_file_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <TextView
            app:layout_constraintVertical_chainStyle="packed"
            android:textStyle="bold"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:id="@+id/tv_info_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_icon_first"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_info_second"
            />
        <TextView
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/tv_info_first"
            app:layout_constraintBottom_toBottomOf="@id/tv_info_first"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_info_first"
            android:gravity="center_vertical"
            android:id="@+id/tv_info_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_icon_second"
            app:drawableStartCompat="@drawable/ic_baseline_add_24"
            />
        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_info_first"
            android:text="@string/info_icon_third"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/circle_view"
        app:layout_constraintTop_toBottomOf="@id/cl_info_icon_container"
        app:layout_constraintBottom_toTopOf="@id/btn_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/head_oval"
        />

    <TextView
        android:layout_marginStart="@dimen/default_margin"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/circle_view"
        app:layout_constraintBottom_toBottomOf="@id/circle_view"
        app:layout_constraintStart_toEndOf="@id/circle_view"
        android:text="@string/info_head_position"
        />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/start" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>