<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/setting_width"
    android:minWidth="@dimen/setting_width"
    android:layout_height="wrap_content"
    >

    <TextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:id="@+id/tv_setting_title"
        android:text="@string/setting_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        />

    <!-- calibration -->
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_setting_title"
        android:id="@+id/cl_calibration_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_calibration_full"
            android:id="@+id/tv_calibration_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/setting_calibration_title"
            />


        <TextView
            android:id="@+id/tv_calibration_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_calibration_full"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/switch_calibration"
        />

        <androidx.appcompat.widget.SwitchCompat
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_calibration_half"
            android:id="@+id/switch_calibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

        <TextView
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/tv_calibration_half"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_calibration_half"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- calibration -->


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>